# lxgui

./: .clang-format  .clang-tidy  .clang-tidy_format  .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  changelog.txt  conanfile.py  lxgui.sublime-project  travis_key.enc  ui.def
.ci/: Build15.bat  LuaCMakeLists.txt  WindowsBuild15.bat  generate-doc.sh  setup-git.sh  windows-dependencies.sh
cmake/: FindLua.cmake  FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_ttf.cmake  FindSFML.cmake  Findlxgui.cmake  Findoup.cmake  lxgui-config.cmake.in
demo/: lxgui-test-opengl-sdl-emscripten.data  lxgui-test-opengl-sdl-emscripten.html  lxgui-test-opengl-sdl-emscripten.js  lxgui-test-opengl-sdl-emscripten.wasm  lxgui-test-sdl-emscripten.data  lxgui-test-sdl-emscripten.html  lxgui-test-sdl-emscripten.js  lxgui-test-sdl-emscripten.wasm  lxgui-test.data  lxgui-test.html  lxgui-test.js  lxgui-test.wasm
dependencies/: LuaWASMCMakeLists.txt  README.md  WindowsBuild15.bat  WindowsSetup15.bat  get-windows-dependencies.sh
doc/: config.ld  dox.conf
examples/: CMakeLists.txt
examples/common/: examples_common.cpp  examples_common.hpp
examples/opengl-sdl/: CMakeLists.txt  main.cpp
examples/opengl-sdl-emscripten/: CMakeLists.txt  main.cpp
examples/opengl-sfml/: CMakeLists.txt  main.cpp
examples/sdl/: CMakeLists.txt  main.cpp
examples/sdl-emscripten/: CMakeLists.txt  main.cpp
examples/sfml/: CMakeLists.txt  main.cpp
gui/: CMakeLists.txt  ui.def
gui/doc/: README.md  config.ld  dox.conf
gui/examples/: CMakeLists.txt
gui/examples/common/: emscripten_shell.html  examples_common.cpp  examples_common.hpp
gui/examples/opengl-sdl/: CMakeLists.txt  main.cpp
gui/examples/opengl-sdl-emscripten/: CMakeLists.txt  main.cpp
gui/examples/opengl-sfml/: CMakeLists.txt  main.cpp
gui/examples/sdl/: CMakeLists.txt  main.cpp
gui/examples/sdl-emscripten/: CMakeLists.txt  main.cpp
gui/examples/sfml/: CMakeLists.txt  main.cpp
gui/impl/gui/gl/: CMakeLists.txt
gui/impl/gui/gl/src/: gui_gl_atlas.cpp  gui_gl_font.cpp  gui_gl_manager.cpp  gui_gl_manager_png.cpp  gui_gl_material.cpp  gui_gl_matrix4.cpp  gui_gl_renderer.cpp  gui_gl_renderer_png.cpp  gui_gl_rendertarget.cpp  gui_gl_vertexcache.cpp
gui/impl/gui/sdl/: CMakeLists.txt
gui/impl/gui/sdl/src/: gui_sdl.cpp  gui_sdl_atlas.cpp  gui_sdl_font.cpp  gui_sdl_material.cpp  gui_sdl_renderer.cpp  gui_sdl_rendertarget.cpp
gui/impl/gui/sfml/: CMakeLists.txt
gui/impl/gui/sfml/src/: gui_sfml.cpp  gui_sfml_atlas.cpp  gui_sfml_font.cpp  gui_sfml_manager.cpp  gui_sfml_material.cpp  gui_sfml_renderer.cpp  gui_sfml_rendertarget.cpp  gui_sfml_vertexcache.cpp
gui/impl/input/glfw/: CMakeLists.txt
gui/impl/input/glfw/src/: glfw_input_impl.cpp  input_glfw_source.cpp
gui/impl/input/ois/: CMakeLists.txt
gui/impl/input/ois/src/: ois_input_impl.cpp
gui/impl/input/sdl/: CMakeLists.txt
gui/impl/input/sdl/src/: input_sdl_source.cpp
gui/impl/input/sfml/: CMakeLists.txt
gui/impl/input/sfml/src/: input_sfml_source.cpp  sfml_input_impl.cpp
gui/src/: gui_alive_checker.cpp  gui_anchor.cpp  gui_atlas.cpp  gui_atlas_default.cpp  gui_backdrop.cpp  gui_button.cpp  gui_button_glues.cpp  gui_button_parser.cpp  gui_checkbutton.cpp  gui_checkbutton_glues.cpp  gui_checkbutton_parser.cpp  gui_color.cpp  gui_editbox.cpp  gui_editbox_glues.cpp  gui_editbox_parser.cpp  gui_event.cpp  gui_eventmanager.cpp  gui_eventreceiver.cpp  gui_focusframe.cpp  gui_focusframe_glues.cpp  gui_focusframe_parser.cpp  gui_font.cpp  gui_fontstring.cpp  gui_fontstring_glues.cpp  gui_fontstring_parser.cpp  gui_frame.cpp  gui_frame_glues.cpp  gui_frame_parser.cpp  gui_framerenderer.cpp  gui_gradient.cpp  gui_layeredregion.cpp  gui_layeredregion_glues.cpp  gui_layeredregion_parser.cpp  gui_localizer.cpp  gui_localizer_glues.cpp  gui_lunar.cpp  gui_manager.cpp  gui_manager_glues.cpp  gui_manager_parser.cpp  gui_material.cpp  (+27 more)
gui/test/: CMakeLists.txt  main.cpp
html/: annotated.html  classLunar-members.html  classLunar.html  classes.html  classgui_1_1anchor-members.html  classgui_1_1anchor.html  classgui_1_1backdrop-members.html  classgui_1_1backdrop.html  classgui_1_1button-members.html  classgui_1_1button.html  classgui_1_1check__button-members.html  classgui_1_1check__button.html  classgui_1_1color-members.html  classgui_1_1color.html  classgui_1_1edit__box-members.html  classgui_1_1edit__box.html  classgui_1_1event-members.html  classgui_1_1event.html  classgui_1_1event__manager-members.html  classgui_1_1event__manager.html  classgui_1_1event__receiver-members.html  classgui_1_1event__receiver.html  classgui_1_1exception-members.html  classgui_1_1exception.html  classgui_1_1focus__frame-members.html  (+1120 more)
impl/gui/gl/: CMakeLists.txt
impl/gui/gl/src/: gui_gl_atlas.cpp  gui_gl_font.cpp  gui_gl_material.cpp  gui_gl_render_target.cpp  gui_gl_render_target_png.cpp  gui_gl_renderer.cpp  gui_gl_renderer_png.cpp  gui_gl_rendertarget.cpp  gui_gl_vertex_cache.cpp  gui_gl_vertexcache.cpp
impl/gui/sdl/: CMakeLists.txt
impl/gui/sdl/src/: gui_sdl.cpp  gui_sdl_atlas.cpp  gui_sdl_font.cpp  gui_sdl_material.cpp  gui_sdl_render_target.cpp  gui_sdl_renderer.cpp  gui_sdl_rendertarget.cpp
impl/gui/sfml/: CMakeLists.txt
impl/gui/sfml/src/: gui_sfml.cpp  gui_sfml_atlas.cpp  gui_sfml_font.cpp  gui_sfml_material.cpp  gui_sfml_render_target.cpp  gui_sfml_renderer.cpp  gui_sfml_rendertarget.cpp  gui_sfml_vertex_cache.cpp  gui_sfml_vertexcache.cpp
impl/input/sdl/: CMakeLists.txt
impl/input/sdl/src/: input_sdl_source.cpp
impl/input/sfml/: CMakeLists.txt
impl/input/sfml/src/: input_sfml_source.cpp
luapp/: CMakeLists.txt
luapp/doc/: dox.conf
luapp/src/: luapp_argument.cpp  luapp_data.cpp  luapp_function.cpp  luapp_glues.cpp  luapp_state.cpp  luapp_var.cpp
test/: CMakeLists.txt  main.cpp
utils/: CMakeLists.txt
utils/src/: utils_any.cpp  utils_exception.cpp  utils_filesystem.cpp  utils_maths.cpp  utils_string.cpp
xml/: CMakeLists.txt
xml/src/: xml_block.cpp  xml_document.cpp
xml/tests/: build.bat  build.sh  test.cpp  test.def  test.xml
(+924 files in other folders)
